--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Frontend Mentor | Four card feature section</title>
 </head>
-<body class="px-7 pt-14 pb-12">
+<body class="bg-slate-50 px-7 pt-14 sm:pt-24 pb-12">
     <h1 class="flex flex-col sm:gap-1 font-poppins text-center text-2xl sm:text-4xl font-extralight text-[#697077] mb-5">
         Reliable, efficient delivery
         <strong class="font-semibold text-[#4c4e61]">Powered by Technology</strong>
